M2 accept ADR-0025 after 70-test gate